2003-12-30  Lars Clausen  <lc@pc770>

	* lib/dia_dirs.[ch] (dia_get_absolute_filename): New function to
	get absolute file name from relative.
	* app/recent_files.c (recent_file_history_add): Use absolute
	filenames for recent files menu so that files can be found when
	Dia is invoked from other places.  

	* app/app_procs.c (handle_all_diagrams): Fix for 1/3 of 130098:
	Actually load different diagrams if such are requested on command
	line.  

	* objects/UML/class_dialog.c (class_create_page): Fix from Luc
	Pionchon <luc@handhelds.org>: Correctly align labels for colors.

	* lib/diagdkrenderer.[ch]: From Luc: New option to GdkRenderer to
	remove text rendering.  May be turned into greeking at some later
	stage.

	* app/interface.c: 
	* app/Makefile.am (dia_core_files): 
	* app/navigation.[ch]: Patch from Luc Pionchon <luc@handhelds.org>:
	Adds navigation window a la Gimp, though without text being
	rendered at all.

2003-12-27  Luc Pionchon <luc@handhelds.org>

	* app/navigation.h: (new file)
	* app/navigation.c: (new file) creates a navigation window with a
	thumbnail view of the whole diagram.
	* app/Makefile.am (dia_core_files): added new files.

	* app/interface.c (create_display_shell): added a button between
	the scrollbars to popup a navigation window.

	* lib/diagdkrenderer.h (struct_DiaGdkRenderer): added rendertext
	boolean
	* lib/diagdkrenderer.c (renderer_init): set rendertext TRUE by default
	* lib/diagdkrenderer.c (draw_string): returns if the renderer do
	not want text rendering.	

2003-12-14  Lars Clausen  <lrclause@cs.uiuc.edu>

	* shapes/Circuit/hresistor.shape: Uses new extra attribute thing.

	* objects/custom/shape_info.[ch]: Cleanup.

	* objects/custom/custom_object.[ch]: Changed to use new props
	interface.

	* lib/properties.h: 
	* lib/prop_text.c: 
	* lib/prop_inttypes.c: 
	* lib/prop_geomtypes.c: Added *prop_get_data_size.

	* lib/libdia.def: Added object_load_props.

	* configure.in: Better FT2 version test, from bug #129225.
